examples/invalid_typed_messages/invalid_field_syntax.argx
module invalid.syntax
type Message { value string }
